test/errors/error4.base
After ':' you can only have a function call e.g. name:foo()
fun foo() {
   _ = foo:foo;
           ^ 
